# napari-deeplabcut

./: .gitignore  README.md  pyproject.toml
src/napari_deeplabcut/: _tracking_worker.py  _widgets.py
src/napari_deeplabcut/tracking/: _widgets.py
